Gifsicle NEWS

Version 1.45   30.Dec.2006

* Do not compile gifview by default when X is not available.


Version 1.44   3.Oct.2005

* gifview: Enforce a minimum delay of 0.002 sec.  Requested by Dale Wiles.


Version 1.43   8.Sep.2005

* '-I -b', and other similar combinations, causes a fatal error rather than
  putting information in an unexpected file.  Reported by Michiel de Bondt.


Version 1.42   8.Jan.2005

* Improve manual page.


Version 1.41   19.Aug.2004

* Fix problems with 64-bit machines.  Thanks to Dan Stahlke for pointing
  out the problem and providing a patch.


Version 1.40   28.Aug.2003

* Fix longstanding bug where '--disposal=previous' was mistakenly
  equivalent to '--disposal=asis'.

* Include Makefile.bcc, from Stephen Schnipsel.


Version 1.39   11.Jul.2003

* Fix Makefile.w32 (oops).


Version 1.38   26.Jun.2003

* Include Makefile.w32 (oops).


Version 1.37   11.Feb.2003

* Fix bug where combining `--rotate-X' and `-O' options would cause a
  segmentation fault. Reported by Dan Lasley <Dan_Lasley@hilton.com>.

* Rearrange source tree.


Version 1.36   17.Nov.2002

* Fix subscript-out-of-range error in main.c reported by Andrea Suatoni.


Version 1.35   14.Aug.2002

* Fixed bug where `--crop' could cause a segmentation fault, present since
  1.32 or 1.33. Reported by Tom Schumm <phong@phong.org>.


Version 1.34   13.Aug.2002

* Fixed bug where combining `--crop' and `-O' options could corrupt output.
  Reported by Tom Schumm <phong@phong.org>.


Version 1.33   1.Aug.2002

* Be more careful about time while animating. In particular, prepare frames
  before they are needed, so that they can be displayed exactly when
  required. Problem reported by Walter Harms <WHarms@bfs.de>.

* More warning fixes.


Version 1.32   5.Jul.2002

* Add `--multifile' option handling concatenated GIF files. This is useful
  for scripts. For example, `gifsicle --multifile -' will merge all GIF